--- a/index.html
+++ b/index.html
@@ -1079,6 +1079,15 @@
                 </div>
                 <div id="packageStatusCountdown" class="package-countdown-display"></div>
             </div>
+            <!-- أزرار اختبار (يمكن حذفها لاحقاً) -->
+            <div style="margin-top: 10px; text-align: center;">
+                <button onclick="testCountdown()" style="background: #4f46e5; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer; font-size: 12px; margin: 2px;">
+                    اختبار العداد
+                </button>
+                <button onclick="testPackageStatusBar()" style="background: #10b981; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer; font-size: 12px; margin: 2px;">
+                    اختبار شريط الباقة
+                </button>
+            </div>
         </div>
 
       
