--- a/tools.html
+++ b/tools.html
@@ -6,6 +6,7 @@
   <title>فاتورة / عرض أسعار</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </head>
 <body class="bg-gray-100 p-4">
   <div class="max-w-3xl mx-auto bg-white rounded-xl shadow-lg p-6">
@@ -17,10 +18,31 @@
       <button onclick="setDocType('عرض أسعار')" class="px-4 py-2 bg-green-600 text-white rounded-lg">عرض أسعار</button>
     </div>
 
-    <!-- بيانات -->
+    <!-- بيانات المكان -->
+    <div class="mb-4">
+      <label class="block mb-1 font-medium">اسم المكان (اختياري):</label>
+      <input id="placeName" type="text" class="w-full border rounded-lg p-2" placeholder="مثال: شركة مسلم تك">
+    </div>
+
+    <div class="mb-4">
+      <label class="block mb-1 font-medium">شعار المكان (اختياري):</label>
+      <input id="placeLogo" type="file" accept="image/*" class="w-full border rounded-lg p-2">
+    </div>
+
+    <!-- بيانات العميل -->
     <div class="mb-4">
       <label class="block mb-1 font-medium">اسم العميل:</label>
       <input id="customer" type="text" class="w-full border rounded-lg p-2">
+    </div>
+
+    <!-- التاريخ والوقت -->
+    <div class="mb-4">
+      <label class="block mb-1 font-medium">التاريخ:</label>
+      <input id="dateInput" type="date" class="w-full border rounded-lg p-2">
+    </div>
+    <div class="mb-4">
+      <label class="block mb-1 font-medium">الوقت:</label>
+      <input id="timeInput" type="time" class="w-full border rounded-lg p-2">
     </div>
 
     <!-- جدول الأصناف -->
@@ -43,6 +65,11 @@
       الإجمالي: <span id="total">0</span> ج.م
     </div>
 
+    <!-- QR Code -->
+    <div class="flex justify-center mb-4">
+      <div id="qrcode"></div>
+    </div>
+
     <!-- أزرار -->
     <div class="flex flex-wrap justify-center gap-4">
       <button onclick="downloadPDF()" class="px-4 py-2 bg-red-600 text-white rounded-lg">📥 تحميل PDF</button>
@@ -54,10 +81,29 @@
   <script>
     const { jsPDF } = window.jspdf;
     let docType = "فاتورة";
+    let logoData = null;
 
     function setDocType(type) {
       docType = type;
       document.getElementById("docTitle").textContent = type;
+      updateQRCode();
+    }
+
+    // شعار
+    document.getElementById("placeLogo").addEventListener("change", function(event) {
+      const file = event.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = e => logoData = e.target.result;
+        reader.readAsDataURL(file);
+      }
+    });
+
+    // ضبط التاريخ والوقت الافتراضي
+    window.onload = function() {
+      const now = new Date();
+      document.getElementById("dateInput").value = now.toISOString().split("T")[0];
+      document.getElementById("timeInput").value = now.toTimeString().slice(0,5);
     }
 
     function addRow() {
@@ -82,16 +128,48 @@
         total += sum;
       });
       document.getElementById("total").textContent = total;
+      updateQRCode();
+    }
+
+    function updateQRCode() {
+      document.getElementById("qrcode").innerHTML = "";
+      const qrText = `${docType}
+العميل: ${document.getElementById("customer").value}
+الإجمالي: ${document.getElementById("total").textContent} ج.م
+التاريخ: ${document.getElementById("dateInput").value} ${document.getElementById("timeInput").value}`;
+      new QRCode(document.getElementById("qrcode"), { text: qrText, width: 128, height: 128 });
     }
 
     function downloadPDF() {
       const pdf = new jsPDF("p", "pt", "a4");
       pdf.setFont("helvetica");
 
-      pdf.text(docType, 250, 40);
-      pdf.text("اسم العميل: " + (document.getElementById("customer").value || "-"), 40, 70);
+      const placeName = document.getElementById("placeName").value;
+      const customer = document.getElementById("customer").value;
+      const date = document.getElementById("dateInput").value;
+      const time = document.getElementById("timeInput").value;
 
-      let y = 110;
+      // watermark
+      if (placeName) {
+        pdf.setTextColor(200, 200, 200);
+        pdf.setFontSize(60);
+        pdf.text(placeName, 150, 400, { angle: 45, opacity: 0.3 });
+      }
+
+      pdf.setFontSize(14);
+      pdf.setTextColor(0, 0, 0);
+
+      pdf.text(docType, 250, 40);
+      if (placeName) pdf.text("المكان: " + placeName, 40, 70);
+      pdf.text("اسم العميل: " + (customer || "-"), 40, 100);
+      pdf.text("التاريخ: " + date + " " + time, 40, 130);
+
+      // logo
+      if (logoData) {
+        pdf.addImage(logoData, "PNG", 450, 20, 80, 80);
+      }
+
+      let y = 170;
       pdf.text("الصنف | الكمية | السعر | الإجمالي", 40, y);
       y += 20;
 
@@ -111,7 +189,7 @@
     }
 
     async function shareDoc() {
-      const text = `${docType}\nاسم العميل: ${document.getElementById("customer").value}\nالإجمالي: ${document.getElementById("total").textContent} ج.م`;
+      const text = `${docType}\nاسم العميل: ${document.getElementById("customer").value}\nالإجمالي: ${document.getElementById("total").textContent} ج.م\nالتاريخ: ${document.getElementById("dateInput").value} ${document.getElementById("timeInput").value}`;
       if (navigator.share) {
         await navigator.share({ title: docType, text });
       } else {
